fixed navbar display behind with z index

--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -8,6 +8,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    z-index: 1;
   }
   
   .menu-bars {
@@ -28,6 +29,7 @@
     left: -100%;
     transition: 850ms;
     color: white;
+    z-index: 1;
   }
   
   .nav-menu.active {
